--- a/electron-quick-start/package.json
+++ b/electron-quick-start/package.json
@@ -17,6 +17,8 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.4.1",
+    "humaninput": "^1.1.12",
+    "jquery": "^3.1.1"
   }
 }
