--- a/electron-quick-start/package.json
+++ b/electron-quick-start/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "electron-quick-start",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
-  "main": "main.js",
+  "name"    : "ranui",
+  "productName": "Ranui",
+  "author": "Ville Vanninen",
+  "version" : "0.0.0",
+  "main"    : "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^1.4.1",
     "humaninput": "^1.1.12",
