--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "devtron": "^1.4.0",
     "electron": "^1.4.15",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "pug": "^2.0.0-beta11"
   }
 }
